--- a/Turbo Codes/TestQSC/TestQSC.vcproj
+++ b/Turbo Codes/TestQSC/TestQSC.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8.00"
-	Name="TestModem"
-	ProjectGUID="{FAA2EEEB-6F63-4B5B-8330-F28AEBCB1147}"
-	RootNamespace="TestModem"
+	Name="TestQSC"
+	ProjectGUID="{8E869B73-F6C3-4E25-A96A-81C5DE1617FA}"
+	RootNamespace="TestQSC"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -186,7 +186,7 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			>
 			<File
-				RelativePath=".\testmodem.cpp"
+				RelativePath=".\testqsc.cpp"
 				>
 			</File>
 		</Filter>
