Divided randgen into interface specification (with user-interface methods) and generation algorithm. The interface is specified by 'random', while 'randgen' is Knuth's subtractive algorithm.

--- a/Libraries/Libbase/LibBase.vcproj
+++ b/Libraries/Libbase/LibBase.vcproj
@@ -489,6 +489,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\Source\random.cpp"
+				>
+			</File>
+			<File
 				RelativePath="Source\rvstatistics.cpp"
 				>
 				<FileConfiguration
@@ -671,6 +675,10 @@
 			</File>
 			<File
 				RelativePath="Source\randgen.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\random.h"
 				>
 			</File>
 			<File
