--- a/Libraries/Libbase/LibBase.vcproj
+++ b/Libraries/Libbase/LibBase.vcproj
@@ -674,6 +674,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\multi_array.h"
+				>
+			</File>
+			<File
 				RelativePath="Source\randgen.h"
 				>
 			</File>
