--- a/Libraries/Libbase/LibBase.vcproj
+++ b/Libraries/Libbase/LibBase.vcproj
@@ -497,6 +497,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\randperm.cpp"
+				>
+			</File>
+			<File
 				RelativePath="Source\rvstatistics.cpp"
 				>
 				<FileConfiguration
@@ -691,6 +695,10 @@
 			</File>
 			<File
 				RelativePath=".\Source\random.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\randperm.h"
 				>
 			</File>
 			<File
