Extracted commsys object from simulator: * commsys object is now the system itself * simulator is an experiment built around the commsys object and a results   collector Note: this changes the requirements for system definition files

--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -423,6 +423,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\commsys_simulator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\commsys_threshold.cpp"
 				>
 			</File>
@@ -1361,6 +1365,10 @@
 			</File>
 			<File
 				RelativePath=".\Source\commsys_prof_sym.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\commsys_simulator.h"
 				>
 			</File>
 			<File
