--- a/Libraries/Libcomm/LibComm.vcproj
+++ b/Libraries/Libcomm/LibComm.vcproj
@@ -323,6 +323,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\Source\blockmodem.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\blockprocess.cpp"
 				>
 			</File>
@@ -728,26 +732,6 @@
 			</File>
 			<File
 				RelativePath="Source\md5.cpp"
-				>
-				<FileConfiguration
-					Name="Release|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-						PreprocessorDefinitions=""
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="Source\modulator.cpp"
 				>
 				<FileConfiguration
 					Name="Release|Win32"
@@ -1224,6 +1208,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\blockmodem.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\blockprocess.h"
 				>
 			</File>
@@ -1389,10 +1377,6 @@
 			</File>
 			<File
 				RelativePath="Source\md5.h"
-				>
-			</File>
-			<File
-				RelativePath="Source\modulator.h"
 				>
 			</File>
 			<File
