Added newest file to project

--- a/Libraries/Libbase/LibBase.vcproj
+++ b/Libraries/Libbase/LibBase.vcproj
@@ -714,6 +714,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\size.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\socket.h"
 				>
 			</File>
