Added SPECturbo project and fixed order of library linking

--- a/Turbo Codes/SPECturbo/.project
+++ b/Turbo Codes/SPECturbo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TestGF</name>
+	<name>SPECturbo</name>
 	<comment></comment>
 	<projects>
 		<project>Libbase</project>
@@ -33,7 +33,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/TestGF/Release}</value>
+					<value>${workspace_loc:/SPECturbo/Debug}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
