--- a/Turbo Codes/TestGF/.project
+++ b/Turbo Codes/TestGF/.project
@@ -33,7 +33,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/TestGF/Release}</value>
+					<value>${workspace_loc:/TestGF/Debug}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
