--- a/Libraries/Libbase/Makefile
+++ b/Libraries/Libbase/Makefile
@@ -1,8 +1,16 @@
+# $Author: jabriffa $
+# $Revision: 1947 $
+# $Date: 2008-11-05 11:22:31 +0000 (Wed, 05 Nov 2008) $
+
+# Function definition for recursive wildcard
+
+rwildcard = $(foreach d,$(wildcard $1*),$(call rwildcard,$d/)$(filter $(subst *,%,$2),$d))
+
 # All compiling, linking, and library flags are imported
 
-SOURCES := $(wildcard Source/*.cpp)
-OBJECTS := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%.o)
-DEPEND := $(SOURCES:Source/%.cpp=$(BUILDDIR)/%.d)
+SOURCES := $(call rwildcard,,*.cpp)
+OBJECTS := $(SOURCES:%.cpp=$(BUILDDIR)/%.o)
+DEPEND := $(SOURCES:%.cpp=$(BUILDDIR)/%.d)
 LIBRARY := $(BUILDDIR)/libbase.a
 
 # Master targets
@@ -26,11 +34,11 @@ $(LIBRARY):	$(OBJECTS)
 
 # Pattern-matched targets
 
-$(BUILDDIR)/%.o:	Source/%.cpp
+$(BUILDDIR)/%.o:	%.cpp
 	@echo "Compiling $< [$(RELEASE)]"
 	@$(CC) $(CCflags) -c $< -o $@
 
-$(BUILDDIR)/%.d:	Source/%.cpp
+$(BUILDDIR)/%.d:	%.cpp
 	@$(MKDIR) $(BUILDDIR)
 	@echo "Making dependancy list for $*.o [$(RELEASE)]"
 	@$(CC) $(CCflags) $(CCdepend) $< | gawk 'BEGIN { FS = "$*.o" } { if( NF > 1 ) { print $$1, "$(BUILDDIR)/$*.d $(BUILDDIR)/$*.o", $$2 } else { print $$0 } }' > $@
